Use URI instead of URL to handle incomplete HTTP URLs in tags